# valkey-bench

./: .gitignore  ADVANCED.md  BENCHMARKING.md  CLAUDE.md  Cargo.toml  DATASETS.md  EXAMPLES.md  INSTALLATION.md  README.md  THIRD_PARTY_LICENSES.md  TODO.md  field-keyspace-design.md  valkey-bench-rs-LLD.md  valkey-benchmark-rust-hld.md  valkey-benchmark-rust-tasks.md  valkey-search-benchmark-LLD.md
bench/: 16xl-ec2.conf  my-config.conf  test_multi_dataset.sh
bench/perf/: EC2-SETUP.md  collect-stats.sh  fix-perf.sh  perf
bench/scripts/: max_qps_recall.py  run_queries.py  stage-monitor.sh
bench/wrappers/: README.md  __init__.py  base_wrapper.py
docs/: RUNTIME_CONFIG[TODO-implement-in-Rust].md  dataset-binary-format.md  dataset-examples.md  runtime-config.conf.example  schema-driven-implementation.md  test-runtime-config.conf  unified-dataset-design.md  valkey-bench-rs-HLD.md
examples/: README.md  create_kv_dataset.py  kv_test.yaml  multiple_numeric_fields_example.sh  numeric_filter_example.sh  product_catalog.yaml  test_hash.yaml  test_small.yaml
prep_datasets/: README.md  check_dataset_structure.py  command_recorder.py  convert_parquet_to_hdf5.py  create_dummy_dataset.py  dataset.sh  dataset_manager.py  download_dataset.py  prepare_binary.py  prepare_schema_binary.py  prereq-vectordbbench.sh
src/: cli_mode.rs  lib.rs  main.rs
src/benchmark/: counters.rs  event_worker.rs  glide_worker.rs  mod.rs  orchestrator.rs  worker.rs
src/client/: benchmark_client.rs  control_plane.rs  mod.rs  raw_connection.rs
src/cluster/: backend.rs  cluster_tag_map.rs  mod.rs  node.rs  protected_ids.rs  topology.rs  topology_manager.rs
src/config/: benchmark_config.rs  cli.rs  mod.rs  runtime_config.rs  search_config.rs  tls_config.rs  workload_config.rs
src/dataset/: binary_dataset.rs  context.rs  header.rs  layout.rs  mod.rs  schema.rs  source.rs
src/glide/: client.rs  mod.rs
src/metrics/: backfill.rs  collector.rs  ft_info.rs  info_fields.rs  mod.rs  node_metrics.rs  reporter.rs  snapshot.rs
src/optimizer/: mod.rs  optimizer.rs
src/utils/: error.rs  mod.rs  resp.rs
src/workload/: addressable.rs  command_template.rs  composite.rs  context.rs  iteration.rs  key_format.rs  lifecycle.rs  mod.rs  numeric_field.rs  parallel.rs  search_ops.rs  tag_distribution.rs  template_factory.rs  workload_type.rs
