[package]
name = "valkey-bench-rs"
version = "0.1.0"
edition = "2021"
authors = ["Zvi Schneider"]
description = "High-performance benchmark tool for Valkey with vector search support"
license = "BSD-3-Clause"

[[bin]]
name = "valkey-bench-rs"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env", "string"] }

# Metrics
hdrhistogram = "7"

# Dataset memory mapping
memmap2 = "0.9"

# Concurrency primitives
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Event-driven I/O (non-blocking sockets)
mio = { version = "1", features = ["os-poll", "net"] }

# Random number generation (fast, non-cryptographic)
fastrand = "2"

# Integer formatting (fast itoa)
itoa = "1"

# Progress and logging
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1"
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Table formatting
tabled = "0.20"

# TLS support
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = ["native-tls-backend"]
native-tls-backend = ["native-tls"]
rustls-backend = ["rustls", "rustls-pemfile", "webpki-roots"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
